--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -18,6 +18,7 @@
 
 .modal {
    position: relative;
+   min-width: 200px ;
    max-width: 80%;
    padding: 1rem;
    border-radius: 5px;
